<?xml version="1.0"?>
<package>
  <name>octomap_ros</name>
  <version>0.0.0</version>
  <description>Clones and installs octomap_ros from http://wiki.ros.org/octomap_msgs.</description>

  <maintainer email="eanelson@eecs.berkeley.edu">Erik Nelson</maintainer>
  <license>None</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>octomap_msgs</buildtool_depend>
</package>
